--- a/build.gradle
+++ b/build.gradle
@@ -1,56 +1,62 @@
+/* build with:
+* ./gradlew publish
+* or:
+* ./gradlew publishToMavenLocal
+*
+* to update this wrapper version
+* $ gradle wrapper --gradle-version 6.7 --distribution-type all
+*/
+
 buildscript {
-    ext {
-        grailsVersion = project.grailsVersion
-    }
     repositories {
-        mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.2"
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.0.10"
     }
 }
 
-plugins {
-    id "io.spring.dependency-management" version "0.5.1.RELEASE"
-    id "com.jfrog.bintray" version "1.1"
-}
+// grails 4 defaults
+apply plugin:"eclipse"
+apply plugin:"idea"
+apply plugin:"org.grails.grails-plugin"
+// apply plugin:"org.grails.grails-plugin-publish"
+apply plugin:"asset-pipeline"
+apply plugin:"org.grails.grails-gsp"
 
-version "3.3.2"
+// extra
+apply plugin: "application"
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
+
+
+
+version "4.0.0"
 // group "org.grails.plugins"
 group "net.codebuilders"
 // mainClassName = 'grails.paypal.Application'
-
-apply plugin: 'maven-publish'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: "org.springframework.boot"
-apply plugin: "org.grails.grails-plugin"
-apply plugin: "org.grails.grails-gsp"
-// Used for publishing to central repository, remove if not needed
-// apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
-// apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
-// extra
-// apply plugin: "application"
-apply plugin: 'maven'
-apply plugin: 'signing'
+// mainClassName = 'org.openoffice.FakeClassName'
 
 ext {
-    grailsVersion = project.grailsVersion
-    gradleWrapperVersion = project.gradleWrapperVersion
-    // isReleaseVersion = !version.endsWith("SNAPSHOT") // used to not pgp sign snapshots
-    isReleaseVersion = false  // until we fix signing
+    // test removing these 2 for grails 4
+    // grailsVersion = project.grailsVersion
+    // gradleWrapperVersion = project.gradleWrapperVersion
+    isReleaseVersion = !version.endsWith("SNAPSHOT") // used to not pgp sign snapshots
+    // isReleaseVersion = false  // until we fix signing
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-
 repositories {
-    mavenLocal()
-    // mavenCentral()
+    // mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
+}
+
+// new block for grails 4
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
 }
 
 dependencyManagement {
@@ -61,6 +67,8 @@ dependencyManagement {
 }
 
 dependencies {
+    // standard 4.0 plugin
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
@@ -78,21 +86,72 @@ dependencies {
     compile "org.grails.plugins:async"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:gsp"
+    compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web-plugin"
-    provided "org.grails:grails-plugin-services"
-    provided "org.grails:grails-plugin-domain-class"
-    runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.2"
+    runtime "com.bertramlabs.plugins:asset-pipeline-grails:3.0.10"
+    testCompile "io.micronaut:micronaut-inject-groovy"
     testCompile "org.grails:grails-gorm-testing-support"
-    // testCompile "org.grails:grails-plugin-testing"
-    testCompile "org.grails.plugins:geb"
+    testCompile "org.mockito:mockito-core"
     testCompile "org.grails:grails-web-testing-support"
-    testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
-    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+
+    // solved empty groovydoc pages
+    compile "org.codehaus.groovy:groovy-dateutil"
+
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = gradleWrapperVersion
+// test if needed for grails 4.0
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+bootRun {
+    ignoreExitValue true
+    jvmArgs(
+            '-Dspring.output.ansi.enabled=always',
+            '-noverify',
+            '-XX:TieredStopAtLevel=1',
+            '-Xmx1024m')
+    sourceResources sourceSets.main
+    String springProfilesActive = 'spring.profiles.active'
+    systemProperty springProfilesActive, System.getProperty(springProfilesActive)
+}
+
+tasks.withType(GroovyCompile) {
+    configure(groovyOptions) {
+        forkOptions.jvmArgs = ['-Xmx1024m']
+    }
+}
+
+// enable if you wish to package this plugin as a standalone application
+bootJar.enabled = false
+
+/*
+grailsPublish {
+    // TODO: Provide values here
+    user = 'user'
+    key = 'key'
+    githubSlug = 'foo/bar'
+    license {
+        name = 'Apache-2.0'
+    }
+    title = "My Plugin"
+    desc = "Full plugin description"
+    developers = [johndoe:"John Doe"]
+}
+*/
+
+// custom for grails-paypal below here...
+
+
+assets {
+    packagePlugin = true
+}
+
+
+// exclude assets that are already present in main app
+jar {
+    exclude "**/META-INF/assets/**"
+    exclude "**/META-INF/assets.list"
 }
 
 groovydoc {
@@ -105,105 +164,92 @@ groovydoc {
 
 archivesBaseName = 'grails-paypal'
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'grails-paypal'
+            from components.java
+
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+            pom {
+                name = 'Grails Paypal Plugin'
+                packaging = 'jar'
+                description = 'A Grails 4.0 plugin for E-Commerce'
+                url = 'http://codebuilders.net'
+                inceptionYear = '2016'
+
+                scm {
+                    url = 'https://github.com/cbmarcum/grails-paypal'
+                    developerConnection = 'https://github.com/cbmarcum/grails-paypal'
+                    connection = 'https://github.com/cbmarcum/grails-paypal'
+                }
+
+                licenses {
+                    license {
+                        name = 'The Apache Software License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution = 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        name = 'Graeme Rocher'
+                    }
+                    developer {
+                        name = 'Matt Stine'
+                    }
+                    developer {
+                        name = 'Matthias Bohlen'
+                    }
+                    developer {
+                        name = 'Carl Marcum'
+                        email = 'carl.marcum@codebuilders.net'
+                        url = 'http://codebuilders.net'
+                        organization = 'Code Builders, LLC'
+                        organizationUrl = 'http://codebuilders.net'
+
+                    }
+                }
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            // change URLs to point to your repos, e.g. http://my.org/repo
+            def releasesRepoUrl = "$buildDir/repos/releases"
+            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
+    }
+}
+
 signing {
     // only pgp sign if not a snapshot and we are uploading to maven repo
     // required { isReleaseVersion && gradle.taskGraph.hasTask("uploadArchives") }
     required { isReleaseVersion }
+    sign publishing.publications.mavenJava
     sign configurations.archives
 }
 
-uploadArchives.repositories.mavenDeployer {
-    // pgp sign the pom file also
-    // beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-    configuration = configurations.archives
-
-
-    // examples:
-    // url: "file://localhost/tmp/myRepo/"
-    // url: "https://repository.apache.org/service/local/staging/deploy/maven2/" // Apache Nexus
-    // url: "http://oss.sonatype.org/service/local/staging/deploy/maven2/"
-    // url: "file://$buildDir/myRepo/" // local build directory
-    repository(url: "file://$buildDir/myRepo/") {
-        // (userName: mavenUser, password: mavenPassword)
+// MAY WANT THIS WITH GROOVYDOC ??
+javadoc {
+    if (JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
     }
-
-    // pom.project
-    pom.project {
-        name 'Grails Paypal Plugin'
-        packaging 'jar'
-        description 'A Grails 3.3 plugin for E-Commerce'
-        url 'http://codebuilders.net'
-        inceptionYear '2016'
-
-        scm {
-            url 'https://github.com/cbmarcum/grails-paypal'
-            developerConnection 'https://github.com/cbmarcum/grails-paypal'
-            connection 'https://github.com/cbmarcum/grails-paypal'
-        }
-
-        licenses {
-            license {
-                name 'The Apache Software License, Version 2.0'
-                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                distribution 'repo'
-            }
-        }
-
-        developers {
-            developer {
-                name 'Graeme Rocher'
-            }
-            developer {
-                name 'Matt Stine'
-            }
-            developer {
-                name 'Matthias Bohlen'
-            }
-            developer {
-                name 'Carl Marcum'
-                email 'carl.marcum@codebuilders.net'
-                url 'http://codebuilders.net'
-                // see: http://www.mail-archive.com/user@gradle.codehaus.org/msg05368.html
-                // organization 'Code Builders, LLC'
-                organization = 'Code Builders, LLC' // <-- note we use assignment here
-                organizationUrl 'http://codebuilders.net'
-
-            }
-        }
-    }
-
-}
-
-groovydoc.mustRunAfter clean
-jar.mustRunAfter groovydoc
-
-groovydoc.dependsOn clean
-jar.dependsOn groovydoc
-
-// custom tasks for creating source/javadoc jars
-task mySourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-/*
-task myCopyResources(type: Copy, dependsOn: groovydoc) {
-    into groovydoc.destinationDir
-    from sourceSets.main.resources
-}
-
-task myGroovydocJar(type: Jar, dependsOn: myCopyResources) {
-    classifier = 'javadoc'
-    from groovydoc.destinationDir
-}
-*/
-task myGroovydocJar(type: Jar, dependsOn: groovydoc) {
-    classifier = 'javadoc'
-    from groovydoc.destinationDir
-}
-
-// add groovydoc/source jar tasks as artifacts
-artifacts {
-    archives mySourcesJar
-    archives myGroovydocJar
 }
