--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
-grailsVersion=3.3.10
-gormVersion=6.1.12.RELEASE
-gradleWrapperVersion=3.5
+grailsVersion=4.0.5
+gorm.version=7.0.6.RELEASE
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
