--- a/build.gradle
+++ b/build.gradle
@@ -30,20 +30,14 @@ apply plugin: "application"
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
-
-
-version "4.0.0"
+version "4.0.1"
 // group "org.grails.plugins"
 group "net.codebuilders"
 // mainClassName = 'grails.paypal.Application'
 // mainClassName = 'org.openoffice.FakeClassName'
 
 ext {
-    // test removing these 2 for grails 4
-    // grailsVersion = project.grailsVersion
-    // gradleWrapperVersion = project.gradleWrapperVersion
     isReleaseVersion = !version.endsWith("SNAPSHOT") // used to not pgp sign snapshots
-    // isReleaseVersion = false  // until we fix signing
 }
 
 repositories {
@@ -95,12 +89,11 @@ dependencies {
     testCompile "org.mockito:mockito-core"
     testCompile "org.grails:grails-web-testing-support"
 
-    // solved empty groovydoc pages
+    // needed for groovydoc - not included in groovy jar anymore
     compile "org.codehaus.groovy:groovy-dateutil"
 
 }
 
-// test if needed for grails 4.0
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -168,8 +161,6 @@ java {
     withJavadocJar()
     withSourcesJar()
 }
-
-
 
 publishing {
     publications {
@@ -241,7 +232,6 @@ publishing {
 
 signing {
     // only pgp sign if not a snapshot and we are uploading to maven repo
-    // required { isReleaseVersion && gradle.taskGraph.hasTask("uploadArchives") }
     required { isReleaseVersion }
     sign publishing.publications.mavenJava
     sign configurations.archives
