--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-grailsVersion=4.0.5
-gorm.version=7.0.6.RELEASE
+grailsVersion=7.0.4
+version=0.1
+org.gradle.caching=true
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
