--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 compileJava.options.release = 17
 
 tasks.withType(Test).configureEach {
+    outputs.upToDateWhen { false } // always run tests
     useJUnitPlatform()
 }
 
